# FundamentalsOfDeepLearning

./: README.md
HWs/HW1/: Activation_functions.ipynb  Pytorch.ipynb  Q5_d.ipynb
HWs/HW2/: HW2_Q4.ipynb  HW2_Q5.ipynb
HWs/HW3/: DL_Q4.ipynb  DL_Q7.ipynb
HWs/HW4/: consumption.ipynb  forward_batchnorm.py  medical.ipynb  report.docx
HWs/HW5/: DL_HW5_Question4.ipynb  report.docx
TA/: HW2_example.pptx  Pytorch.ipynb  uesful links.txt
project/: SA.ipynb  test_cleaned.tsv
project/1_SA - Early Stopping/: pyproject.toml
project/1_SA - Early Stopping/src/: main.ipynb
project/1_SA - Early Stopping/src/utils/: constants.py  dataset.py  parsbert.py
project/1_SA - Early Stopping/stats/: bert-fa-base-uncased-sentiment-digikala_test.csv  bert-fa-base-uncased-sentiment-digikala_train.csv  bert-fa-base-uncased-sentiment-snappfood_test.csv  bert-fa-base-uncased-sentiment-snappfood_train.csv  bert-fa-base-uncased_test.csv  bert-fa-base-uncased_train.csv  bert-fa-zwnj-base_test.csv  bert-fa-zwnj-base_train.csv
project/3_SA - L2 - Smaller Val Split 0.1/SA - L2 - Smaller Val/: README.MD
project/4_SA - L2 - Smaller Val Split 0.1 batch size bigger/: DL_proj_main.ipynb
project/4_SA - L2 - Smaller Val Split 0.1 batch size bigger/stats/: bert-fa-base-uncased-sentiment-digikala_test.csv  bert-fa-base-uncased-sentiment-digikala_train.csv  bert-fa-base-uncased-sentiment-snappfood_train.csv  bert-fa-base-uncased_train.csv  bert-fa-zwnj-base_train.csv
project/Final files Quera/: Evaluate.py  Predict.py  SA.ipynb  SA.py
project/SA_Final/data/: test_cleaned.tsv  (+1 more)
(+51 files in other folders)
