[tool.poetry]
name = "sa"
version = "0.1.0"
description = ""
authors = ["Hamed Feizabadi <hamedfz19@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
transformers = {extras = ["torch"], version = "^4.37.1"}
pandas = "^2.2.0"
scikit-learn = "^1.4.0"
torch = "^2.1.2"
pyarrow = "^15.0.0"
jupyter = "^1.0.0"
tqdm = "^4.66.1"
clean-text = "^0.6.0"
numpy = "^1.24.3"
unidecode = "^1.3.8"
joblib = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
